# libtropic-python

./: .gitignore  .gitmodules  CLAUDE.md  PARITY.md  README.md  pyproject.toml  upload_firmware.py
.claude/commands/: git-commit.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  development_rules.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
examples/: fw_update.py  hello_world.py  mac_and_destroy.py  show_chip_info.py  verify_device_cert.py
libtropic/: __init__.py  enums.py  exceptions.py  firmware.py
libtropic/storage/: __init__.py  config.py
libtropic/transport/: usb_dongle.py
src/libtropic/: __init__.py  config.py  counters.py  device.py  ecc.py  enums.py  exceptions.py  firmware.py  firmware_data.py  keys.py  mac_and_destroy.py  memory.py  pairing_keys.py  random.py  types.py
src/libtropic/_cal/: __init__.py  aesgcm.py  hkdf.py  hmac_sha256.py  memzero.py  sha256.py  x25519.py
src/libtropic/_cert/: __init__.py  root_ca.py  verify.py
src/libtropic/_protocol/: __init__.py  constants.py  crc16.py  l1.py  l2.py  l3.py
src/libtropic/crypto/: __init__.py  aesgcm.py  ecc.py  hkdf.py  hmac_sha256.py  memzero.py  random.py  sha256.py  x25519.py
src/libtropic/storage/: __init__.py  config.py  memory.py
src/libtropic/transport/: __init__.py  base.py  spi.py  usb_dongle.py
tests/: __init__.py  conftest.py  run_integration_tests.sh  run_integration_tests_SPI.sh  run_irreversible_tests.sh  run_unit_tests.sh  test_imports.py
tests/functional/: __init__.py  test_config.py  test_counters.py  test_device.py  test_ecc_keys.py  test_mac_and_destroy.py  test_memory.py  test_pairing_keys.py  test_ping.py  test_random.py  test_signing.py
tests/unit/: __init__.py
tests/unit/cal/: __init__.py  conftest.py  test_aesgcm.py  test_hkdf.py  test_hmac_sha256.py  test_memzero.py  test_sha256.py  test_x25519.py
