[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libtropic"
version = "0.1.0"
description = "Python bindings for TROPIC01 secure element"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tropic Square", email = "info@tropicsquare.com"}
]
keywords = ["tropic01", "secure-element", "cryptography", "hardware-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
usb = ["pyserial>=3.5"]
spi = ["spidev>=3.6", "gpiod>=2.0"]
all = ["pyserial>=3.5", "spidev>=3.6", "gpiod>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/tropicsquare/libtropic-python"
Documentation = "https://github.com/tropicsquare/libtropic-python#readme"
Repository = "https://github.com/tropicsquare/libtropic-python"
Issues = "https://github.com/tropicsquare/libtropic-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
libtropic = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
mypy_path = "src"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["D100", "D104", "D107"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.coverage.run]
source = ["src/libtropic"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
